# ansible-role-redis

./: .ansible-lint  .gitignore  .yamllint  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
defaults/: main.yml
docs/plans/2025-12-tls-tests/: initial_prompt.md  plan.md
docs/prs/: PR_010_2025-12-migrate-to-uv.md  pr_011_molecule_tls_testing.md
handlers/: main.yml
meta/: main.yml
molecule/: README.md
molecule/default/: converge.yml  molecule.yml  test-requirements.txt
molecule/default/tests/: test_defaults.py
molecule/install-from-repo/: README.md  converge.yml  molecule.yml
molecule/install-from-source/: converge.yml  molecule.yml
molecule/install-from-source/tests/: test_defaults.py
molecule/install-package/: converge.yml  molecule.yml  test-requirements.txt
molecule/install-package/tests/: test_install_from_repo.py
molecule/tls/: converge.yml  molecule.yml  prepare.yml
molecule/tls/tests/: test_tls.py
tasks/: configure.yml  install-package.yml  install-source.yml  main.yml  preflight.yml
templates/: redis-server.service.j2  redis.conf.j2
vars/: Debian.yml  RedHat.yml  main.yml
